# dapps-template-gear-academy

contracts/01-tamagotchi/src/: lib.rs
contracts/01-tamagotchi/tests/: smoke.rs
contracts/02-tamagotchi-interaction/io/src/: lib.rs
contracts/02-tamagotchi-interaction/src/: lib.rs
contracts/02-tamagotchi-interaction/tests/: interaction.rs
contracts/03-tamagotchi-nft/io/src/: lib.rs
contracts/03-tamagotchi-nft/src/: lib.rs
contracts/03-tamagotchi-nft/tests/: owning.rs
contracts/04-tamagotchi-shop/: Cargo.toml
contracts/04-tamagotchi-shop/io/: Cargo.toml
contracts/04-tamagotchi-shop/io/src/: lib.rs
contracts/04-tamagotchi-shop/src/: lib.rs
contracts/05-tamagotchi-auto/: Cargo.toml
contracts/05-tamagotchi-auto/io/: Cargo.toml
contracts/05-tamagotchi-auto/io/src/: lib.rs
contracts/05-tamagotchi-auto/src/: lib.rs
